[workspace]
members = ["qemu"]
resolver = "2"

[workspace.lints.rust]
unknown_lints = "allow"

[workspace.lints.clippy]
# Do not enable whole groups to avoid breaking on new versions of clippy
complexity = "allow"
style = "allow"
perf = "allow"
suspicious = "allow"

# lints that we do not want even in the CI job that enables the four
# groups above
too_many_arguments = "allow"
upper_case_acronyms = "allow"

# If something ever triggers in the Rust-nightly CI job, you probably
# should fix it and add an entry here (or less likely, just place it in
# the "allow" section above).
almost_complete_range = "deny"
as_ptr_cast_mut = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
borrow_deref_ref = "deny"
borrowed_box = "deny"
borrow_interior_mutable_const = "deny"
box_default = "deny"
builtin_type_shadow = "deny"
cast_ptr_alignment = "deny"
clone_on_copy = "deny"
crosspointer_transmute = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
doc_lazy_continuation = "deny"
doc_markdown = "deny"
drop_non_drop = "deny"
empty_structs_with_brackets = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
let_with_type_underscore = "deny"
macro_use_imports = "deny"
map_unwrap_or = "deny"
multiple_crate_versions = "deny"
mut_mut = "deny"
needless_bitwise_bool = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
needless_question_mark = "deny"
needless_return = "deny"
needless_return_with_question_mark = "deny"
new_ret_no_self = "deny"
no_effect = "deny"
no_effect_underscore_binding = "deny"
option_as_ref_deref = "deny"
option_option = "deny"
or_then_unwrap = "deny"
or_fun_call = "deny"
ptr_arg = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
pub_underscore_fields = "deny"
redundant_allocation = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
redundant_pub_crate = "deny"
ref_binding_to_reference = "deny"
ref_option_ref = "deny"
return_self_not_must_use = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
shadow_unrelated = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
suspicious_operation_groupings = "deny"
to_string_in_format_args = "deny"
transmutes_expressible_as_ptr_casts = "deny"
transmute_ptr_to_ptr = "deny"
transmute_ptr_to_ref = "deny"
transmute_undefined_repr = "deny"
type_repetition_in_bounds = "deny"
unnecessary_fallible_conversions = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_mut_passed = "deny"
unreadable_literal = "deny"
unused_self = "deny"
unwrap_or_default = "deny"
used_underscore_binding = "deny"
useless_transmute = "deny"
wildcard_imports = "deny"
wrong_self_convention = "deny"
zero_prefixed_literal = "deny"
