[package]
name = "qemu"
version = "0.1.0"
edition = "2021"

[dependencies]
const-default = { version = "~1", features = ["derive"] }
libc = "^0"

# pick older version in order to support Rust 1.63
cstr = { version = "=0.2.10" }

[dev-dependencies]
matches = ">=0"

[build-dependencies]
version_check = { version = "~0.9" }

# pick older version in order to support Rust 1.63
toml_edit = { version = "~0.14" }

[lints]
workspace = true

[package.metadata.clippy]
# We don't care about exported API. How to put this in the workspace?
avoid-breaking-exported-api = true
